get movie data with React Query

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,20 @@
 @import "tailwindcss";
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 6px solid #e0e0e0;
+  border-top: 6px solid #1e90ff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
